# millenium-player

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: audio.rs  broadcast.rs  lib.rs  location.rs  message.rs  metadata.rs  player.rs  playlist.rs  state.rs
core/src/audio/: device.rs  sink.rs  source.rs
core/src/player/: handle.rs  message.rs  state.rs  thread.rs  waveform.rs
design/ui/: simple-mode.excalidraw
desktop/assets/: Cargo.toml  build.rs
desktop/assets/src/: asset.rs  lib.rs
desktop/backend/: Cargo.toml  build.rs
desktop/backend/src/: error.rs  ipc.rs  lib.rs  playlist.rs  ui.rs
desktop/backend/src/ipc/: from_ui.rs  to_ui.rs
desktop/frontend/: Cargo.toml  Trunk.toml  index.html.hbs
desktop/frontend/src/: log.rs  macros.rs  main.rs  message.rs
desktop/frontend/src/component/: duration.rs  media_controls.rs  media_info.rs  root.rs  time_slider.rs  title_bar.rs  volume_slider.rs  waveform.rs
desktop/frontend/style/: index.scss  media-controls.scss  mixins.scss  simple-mode.scss  theme-default.scss  time-slider.scss  title-bar.scss  volume-slider.scss
desktop/tools/expand-template/: Cargo.toml
desktop/tools/expand-template/src/: main.rs
desktop/ui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
desktop/ui/scripts/: build-templates.ts
desktop/ui/src/: index.html.hbs  index.tsx  ipc.ts
desktop/ui/src/component/: media-control.tsx  time.tsx
desktop/ui/src/style/: index.less  media-controls.less  mixins.less  simple-mode.less
desktop/ui/src/ts/: index.tsx  waveform.ts
flatpak/: com.github.jdisanti.milleniumplayer.MilleniumPlayer.yml
millenium-assets/: .prettierrc  Cargo.toml  build.rs  package-lock.json  package.json  tsconfig.json  webpack.config.js
millenium-assets/src/: asset.rs  build-templates.ts  index.html.hbs  lib.rs  simple_mode.html.hbs
millenium-assets/src/style/: index.less  mixins.less  simple-mode.less  theme-default.less  title-bar.less
millenium-assets/src/ts/: index.ts  index.tsx  ipc.ts  waveform.ts
millenium-assets/static/: simple_mode.html
millenium-assets/static/cantarell/: README.md
millenium-assets/style/: index.less
millenium-assets/ts/: index.ts  ipc.ts
millenium-core/: Cargo.toml
millenium-core/src/: audio.rs  lib.rs  location.rs  metadata.rs  player.rs
millenium-core/src/audio/: device.rs  sink.rs  source.rs
millenium-core/src/player/: audio.rs  handle.rs  message.rs  sink.rs  source.rs  state.rs  thread.rs  waveform.rs
millenium-desktop/: Cargo.toml
millenium-desktop/src/: args.rs  error.rs  ipc.rs  main.rs  simple_mode.rs  ui.rs
millenium-desktop/src/ipc/: from_ui.rs  to_ui.rs
post-office/: Cargo.toml
post-office/src/: bytes.rs  frontend.rs  lib.rs  state.rs  types.rs
post-office/src/frontend/: message.rs  state.rs
prototype/: Cargo.toml
prototype/src/: drag_and_drop.rs  main.rs  play_audio.rs  waveform.rs  wry_test.rs
test-data/hydrate/: ATTRIBUTION
test-data/melodic_a_minor/: ATTRIBUTION
