# This file is part of Millenium Player.
# Copyright (C) 2023 John DiSanti.
#
# Millenium Player is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# Millenium Player is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Millenium Player.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "millenium-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
aac = ["symphonia/aac"]

[dependencies]
base64 = "0.21.2"
camino = "1.1.6"
cpal = "0.15.2"
log = "0.4.20"
rubato = "0.14.1"
rustfft = "6.1.0"
serde = { version = "1.0.188", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["adpcm", "flac", "mp1", "mp2", "mp3", "pcm", "vorbis"] }
thiserror = "1.0.47"
url = "2.4.0"

[dev-dependencies]
fastrand = "2.0.0"
pretty_assertions = "1.4.0"
