# This file is part of Millenium Player.
# Copyright (C) 2023 John DiSanti.
#
# Millenium Player is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# Millenium Player is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Millenium Player.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "millenium-desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.3.21", default-features = false, features = ["std", "help", "usage"] }
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["extra_debug_asserts", "log"] }
millenium-core = { path = "../millenium-core" }
url = "2.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
