# This file is part of Millenium Player.
# Copyright (C) 2023 John DiSanti.
#
# Millenium Player is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# Millenium Player is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Millenium Player.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "millenium-player-prototype"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
eframe = "0.22.0"
egui = "0.22.0"
global-hotkey = "0.2.4"
http = "0.2.9"
muda = "0.8.5"
rodio = { version = "0.17.1", default-features = false, features = ["symphonia-all"] }
rustfft = "6.1.0"
wry = "0.31.1"
