# This file is part of Millenium Player.
# Copyright (C) 2023 John DiSanti.
#
# Millenium Player is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# Millenium Player is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Millenium Player.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "millenium-desktop-frontend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
js-sys = "0.3"
millenium-post-office = { path = "../../post-office", features = ["deserialize", "serialize"] }
once_cell = "1.18.0"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.105"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation"] }
yew = { version = "0.20.0", features = ["csr"] }
